# rust-cxx-brpc-demo

./: LICENSE  README.md
brpc/: README.md
brpc/client/: BUILD.bazel  bridgecs.rs  client.cc  client.h
brpc/msg/: BUILD.bazel  echo.cc  echo.h
brpc/proto/: BUILD.bazel  echo.proto
brpc/server/: BUILD.bazel  bridgeserver.rs  server.cpp  server.h
brpc/test/: BUILD.bazel  brpc.rs
c2r/: BUILD.bazel  bin.cpp  bridge.rs  hello.rs
r2c/: BUILD.bazel  bin.rs  bridge.rs  hello.cpp  hello.h
