load("@com_github_dtolnay_cxx//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@rules_cc:defs.bzl", "cc_library")
load(
    "@rules_rust:defs.bzl",
    "rust_library",
    "rust_test",
)

cc_library(
    name = "server_hdr",
    hdrs = ["server.h"],
    deps = [
        "//brpc/proto:echo_brpc",
        "@com_github_dtolnay_cxx//:core",
    ],
)

cc_library(
    name = "brpc_server_cc",
    srcs = ["server.cpp"],
    visibility = ["//brpc:__subpackages__"],
    deps = [
        ":bridge_server",
        "//brpc/client",
        "//brpc/client:bridge_cs",
        "//brpc/proto:echo_brpc",
        "@com_github_apache_brpc//:brpc",
    ],
)

rust_library(
    name = "server",
    srcs = ["bridgeserver.rs"],
    visibility = ["//brpc:__subpackages__"],
    deps = ["@com_github_dtolnay_cxx//:cxx"],
)

rust_cxx_bridge(
    name = "bridge_server",
    src = "bridgeserver.rs",
    visibility = ["//brpc:__subpackages__"],
    deps = [
        ":server_hdr",
        "@com_github_apache_brpc//:brpc",
    ],
)

# bb test --test_output=all :test
rust_test(
    name = "test",
    size = "small",
    crate = ":server",
    deps = [
        ":bridge_server",
        ":brpc_server_cc",
        "//brpc/msg:echo_cc",
        "@com_github_dtolnay_cxx//:cxx",
    ],
)
